--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
-        <mybatisplus.version>3.5.3.1</mybatisplus.version>
-        <dynamic-datasource.version>3.6.1</dynamic-datasource.version>
+        <mybatisplus.version>3.5.3.2</mybatisplus.version>
+        <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
         <redisson.version>3.21.3</redisson.version>
         <dameng.version>8.1.2.79</dameng.version>
         <knife4j.version>4.3.0</knife4j.version>
@@ -46,9 +46,10 @@
         <minio.version>8.5.1</minio.version>
         <qcloud.cos.version>5.6.97</qcloud.cos.version>
         <huaweicloud.obs.version>3.22.3</huaweicloud.obs.version>
-        <easyexcel.version>3.2.1</easyexcel.version>
+        <easyexcel.version>3.3.2</easyexcel.version>
         <okio.version>3.3.0</okio.version>
         <easytrans.version>2.2.7</easytrans.version>
+        <jsoup.version>1.16.1</jsoup.version>
         <transmittable.thread.local.version>2.14.2</transmittable.thread.local.version>
     </properties>
 
@@ -77,7 +78,7 @@
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
-                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
                 <version>${dynamic-datasource.version}</version>
             </dependency>
             <dependency>
@@ -169,6 +170,11 @@
                 <groupId>com.fhs-opensource</groupId>
                 <artifactId>easy-trans-mybatis-plus-extend</artifactId>
                 <version>${easytrans.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
