--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
         <redisson.version>3.21.3</redisson.version>
         <dameng.version>8.1.2.79</dameng.version>
-        <knife4j.version>4.3.0</knife4j.version>
+        <knife4j.version>4.4.0</knife4j.version>
         <hutool.version>5.8.21</hutool.version>
         <captcha.version>1.6.2</captcha.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -51,6 +51,9 @@
         <easytrans.version>3.0.0</easytrans.version>
         <jsoup.version>1.16.1</jsoup.version>
         <mybatis.spring.version>3.0.3</mybatis.spring.version>
+        <justauth.version>1.16.6</justauth.version>
+        <ip2region.version>2.7.0</ip2region.version>
+        <bouncycastle.version>1.69</bouncycastle.version>
         <transmittable.thread.local.version>2.14.2</transmittable.thread.local.version>
     </properties>
 
@@ -186,6 +189,21 @@
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
                 <version>${mybatis.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>me.zhyd.oauth</groupId>
+                <artifactId>JustAuth</artifactId>
+                <version>${justauth.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lionsoul</groupId>
+                <artifactId>ip2region</artifactId>
+                <version>${ip2region.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15to18</artifactId>
+                <version>${bouncycastle.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
