--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <mybatisplus.version>3.5.5</mybatisplus.version>
         <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
         <redisson.version>3.21.3</redisson.version>
+        <lock4j.version>2.2.7</lock4j.version>
         <dameng.version>8.1.2.79</dameng.version>
         <knife4j.version>4.4.0</knife4j.version>
         <hutool.version>5.8.21</hutool.version>
@@ -89,6 +90,11 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>lock4j-redisson-spring-boot-starter</artifactId>
+                <version>${lock4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.dameng</groupId>
