--- a/maku-framework/pom.xml
+++ b/maku-framework/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>lock4j-redisson-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
