--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@
         <ip2region.version>2.7.0</ip2region.version>
         <bouncycastle.version>1.69</bouncycastle.version>
         <transmittable.thread.local.version>2.14.2</transmittable.thread.local.version>
+        <aliyun.dm.version>1.0.6</aliyun.dm.version>
+        <tencentcloud.sdk.ses.version>3.1.944</tencentcloud.sdk.ses.version>
+        <mail.version>1.6.2</mail.version>
     </properties>
 
     <dependencies>
@@ -210,6 +213,21 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15to18</artifactId>
                 <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>dm20151123</artifactId>
+                <version>${aliyun.dm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tencentcloudapi</groupId>
+                <artifactId>tencentcloud-sdk-java-ses</artifactId>
+                <version>${tencentcloud.sdk.ses.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>${mail.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
